--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -3,6 +3,11 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+ <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Henny+Penny' rel='stylesheet' type='text/css'>
+
   <title> Atelier Creative </title>
 
 </head>
